--- a/resume/arnav-kumar.tex
+++ b/resume/arnav-kumar.tex
@@ -101,7 +101,7 @@
     \item Developed and implemented an enhanced lattice syncing and node discovery algorithm in Go, querying peers with Protocol Buffers to identify and address missing blocks in the local lattice with secure and concurrent updates.
     \item Created and deployed a locally hosted debugging website in Go to be run by each node of the blockchain network.
     \item Designed multiple mock servers, clients, and services to create multiple tests for the syncing and discovery algorithms with Go's Ginkgo and Gomega testing frameworks.
-    \item Integrated Jenkins with the project through a Jenkinsfile to automatically build, test, vet, and format pushed code.
+    \item Created Jenkins pipeline which automatically build, test, vet, and format pushed code to catch regressions.
 \end{resumeList}
 \end{resumeItem}
 
@@ -168,7 +168,7 @@
 \begin{resumeItem}
 \projectHead{\href{https://github.com/arnavcs/cli-chess}{CLI Chess}}{Haskell}{Aug 2022 - Present}
 \begin{resumeList}
-    \item Created a local mulitplayer clone of the game of chess in Haskell that can be played in the CLI with the Haskell REPL.
+    \item Created a local mulitplayer chess clone in Haskell that can be played in the CLI with the Haskell REPL.
     \item Developed safe and scalable functions to determine the state of the board and indentify check and checkmate.
     \item Employed lists as applicative functors and monads to write concise, readable code for determining all valid next moves.
 \end{resumeList}
