--- a/resume-cv/education.tex
+++ b/resume-cv/education.tex
@@ -1,10 +1,10 @@
 \section{Education}
 
 \begin{resumeItem}
-\experienceHead{Candidate for BSc. Computer Science}{University of Waterloo}{2022 - Present}{Waterloo, ON.}
+\experienceHead{Candidate for BSc. Computer Science (term 3A)}{University of Waterloo}{2022 - Present}{Waterloo, ON.}
 \begin{resumeList}
-    \item Received the Ronald G. Dunkley National Scholarship (\$18,000), the President's Entrance Scholarship (\$2,500), and the Cenovus Energy STEM Scholarship (\$14,000).
-    \item Core average of 98\% (4.0 GPA) with all advanced level courses and received term distinction.
+    \item 3.99/4.0 GPA after second year with all advanced level courses and received term distinction.
+    \item Received the Ronald G. Dunkley National Scholarship (\$18,000), the President's Entrance Scholarship (\$3,500), the NSERC undergraduate research scholarship (\$6,000), and the Cenovus Energy STEM Scholarship (\$18,500).
 \end{resumeList}
 \end{resumeItem}
 
