--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -1,11 +1,20 @@
 \section{Experience}
 
 \begin{resumeItem}
+\experienceHead{Combinatorics Researcher}{University of Waterloo}{May 2024 - Aug 2024}{Waterloo}
+\begin{resumeList}
+    \item Worked on novel research exploring random graph orders and poset dimension utilizing probabilistic methods including configuration models, approximation techniques, and convergence in probability. 
+    \item Examined a conjecture about poset dimension, designing and running programs to search for counterexamples, and devising constructions to improve random graph order dimension bounds.
+    \item Engaged in regular meetings to discuss and advance research, demonstrating capacity for effective collaboration.
+\end{resumeList}
+\end{resumeItem}
+
+\begin{resumeItem}
 \experienceHead{Blockchain Software Engineer}{Dandelion Networks}{May 2023 - Aug 2023}{Online}
 \begin{resumeList}
     \item Developed and implemented an enhanced lattice syncing and node discovery algorithm in Go, querying peers with Protocol Buffers to identify and address missing blocks in the local lattice with secure and concurrent updates.
     \item Created and deployed a locally hosted debugging website in Go to be run by each node of the blockchain network.
-    \item Designed multiple mock servers, clients, and services to create multiple tests for the syncing and discovery algorithms with Go's Ginkgo and Gomega testing frameworks.
+    \item Designed multiple mock servers, clients, and services with Ginkgo and Gomega to test the algorithms.
     \item Created Jenkins pipeline which automatically build, test, vet, and format pushed code to catch regressions.
 \end{resumeList}
 \end{resumeItem}
@@ -52,7 +61,7 @@
 \begin{resumeItem}
 \experienceHead{Machine Learning Research Intern}{University of Alberta}{Jul 2021 - Aug 2021}{Online}
 \begin{resumeList}
-    \item Trained and employed natural language processing models to help determine the cause of a change in depressive language in Tweets as part of a psychology study.
+    \item Trained and employed Natural Language Processing (NLP) models to help determine the cause of a change in depressive language in Tweets as part of a psychology study.
     \item Created an evaluation framework with graphs and videos to analyse subject mouse position data during exams.
     \item Developed automation pipeline in Bash to reduce time spent by $20\times$ on the application of the evaluation framework.
 \end{resumeList}
