--- a/resume-cv/projects.tex
+++ b/resume-cv/projects.tex
@@ -1,6 +1,14 @@
 \section{Projects}
 
 \begin{resumeItem}
+\projectHead{\href{https://kdxiao.itch.io/bloom}{Bloom (Game)}}{Godot}{Jun 2024}
+\begin{resumeList}
+    \item Game jam submission made in 72 hours with Godot: ``you are a bee that pollinates flowers in a field to plant new hybrids''
+    \item Implemented colour mixing, screen wrapping, movement, and flower spawning mechanics
+\end{resumeList}
+\end{resumeItem}
+
+\begin{resumeItem}
 \projectHead{\href{https://github.com/youssefsoli/IPFE}{InterPlanetary File Explorer (IPFE)}}{Go, Python, Scikit-learn, Estuary, Co:here, Three.js}{Jan 2023}
 \begin{resumeList}
     \item Created vector embeddings for files with their headers using Co:here's NLP embeddings to facilitate classification of files.
@@ -20,7 +28,7 @@
 \projectHead{\href{https://github.com/arnavcs/quack-stack}{Custom Language Interpreter}}{Haskell}{May 2023 - Present}
 \begin{resumeList}
     \item Created an expression evaluator for a self-made stack-based language.
-    \item Implemented zipper traversal to determine which part of the stack has already been processed in a followable, stepwise manner.
+    \item Implemented zipper traversal to determine which part of the stack has already been processed.
 \end{resumeList}
 \end{resumeItem}
 
