--- a/resume-cv/skills.tex
+++ b/resume-cv/skills.tex
@@ -2,9 +2,9 @@
 
 \begin{resumeItem}
 \subsubsection{Languages}
-Go, Python, C++, JavaScript, Haskell, Racket, Java, Bash, {\LaTeX}, HTML, CSS, Markdown, RegEx
+Go, Python, C++, JavaScript, GDScript, Haskell, Racket, Java, Bash, {\LaTeX}, HTML, CSS, Markdown, RegEx
 
 \subsubsection{Tools}
-Linux, Unix, Protobuf, Gomega, Ginkgo, Pandas, Matplotlib, NumPy, Beautiful Soup, Tensorflow, Scikit-learn, OpenCV
+Linux, Unix, Godot, Protobuf, Gomega, Ginkgo, Pandas, Matplotlib, NumPy, Beautiful Soup, Tensorflow, Scikit-learn, OpenCV
 \end{resumeItem}
 
