--- a/resume-cv/achievements.tex
+++ b/resume-cv/achievements.tex
@@ -4,14 +4,14 @@
 \begin{resumeList}
     \item \achievement{$335^{\mathrm{th}}$ (top $10\%$), with score $26$}{William Lowell Putnam Mathematical Competition}{2022}
     \item \achievement{Estuary Sponsor Prize Winner}{UofTHacks X}{2023}
-    \item \achievement{$10^{\mathrm{th}}$ in Canada}{Asian Pacific Mathematics Olympiad}{2022}
-    \item \achievement{$11^{\mathrm{th}}$ in Canada}{Canadian Association of Physicists High School Exam}{2022}
+    \item \achievement{$10^{\mathrm{th}}$ in Canada}{Asian Pacific Mathematics Olympiad (APMO)}{2022}
 
     \ifthenelse{ \equal{\version}{cv} }{
+    \item \achievement{$11^{\mathrm{th}}$ in Canada}{Canadian Association of Physicists High School Exam}{2022}
     \item \achievement{$12^{\mathrm{th}}$ in Canada, $17^{\mathrm{th}}$ internationally}{Sir Isaac Newton Physics Exam}{2021 - 2022}
     }{}
 
-    \item \achievement{$18^{\mathrm{th}}$ in Canada, 2 time qualifier}{Canadian Mathematical Olympiad}{2021 - 2022}
+    \item \achievement{$18^{\mathrm{th}}$ in Canada, 2 time qualifier}{Canadian Mathematical Olympiad (CMO)}{2021 - 2022}
 
     \ifthenelse{ \equal{\version}{cv} }{
     \item \achievement{Canadian Honour Roll, Top in Alberta}{Canadian Open Mathematics Challenge}{2017 - 2022} % Gold or Silver Alberta medalist every year
@@ -19,7 +19,7 @@
     \item \achievement{Part II winner, 3 time part I winner}{Alberta High School Mathematics Competition}{2018 - 2022} % perfect score in part I, AHSMC fellow
     }{}
 
-    \item \achievement{Invited to write}{United States of America Mathematical Olympiad}{2022}
+    \item \achievement{Invited to write}{United States of America Mathematical Olympiad (USAMO)}{2022}
     \item \achievement{Bronze medalist for machine learning project on prognosing IPF}{Canada Wide Science Fair}{2021}
 \end{resumeList}
 \end{resumeItem}
