--- a/resume-cv/arnav-kumar.tex
+++ b/resume-cv/arnav-kumar.tex
@@ -2,7 +2,7 @@
 
 \usepackage{enumitem}
 \usepackage{fontawesome}
-\usepackage[margin = 0.5in, top=0.35in]{geometry}
+\usepackage[margin = 0.5in, top=0.20in]{geometry}
 \usepackage{ifthen}
 \usepackage[utf8]{inputenc}
 \usepackage{marvosym}
@@ -20,9 +20,9 @@
 \def\version{resume}
 \fi
 
-\definecolor{MyBlue1}{RGB}{28, 43, 112}
-\definecolor{MyBlue2}{RGB}{35, 54, 140}
-\definecolor{MyBlue3}{RGB}{42, 65, 168}
+\definecolor{MyBlue1}{RGB}{50, 50, 200}
+\definecolor{MyBlue2}{RGB}{50, 50, 200} % Headers
+\definecolor{MyBlue3}{RGB}{50, 50, 200} % Title
 
 \newcommand{\smallbullet}{\,\begin{picture}(-1,1)(-1,-3)\circle*{3}\end{picture}\ }
 
@@ -33,7 +33,7 @@
 \titleformat{\subsection}{\color{MyBlue1}\bfseries\large}{}{0em}{}
 \titleformat{\subsubsection}[runin]{\bfseries}{}{0em}{}[:]
 
-\titlespacing{\section}{0em}{1em}{0em}
+\titlespacing{\section}{0em}{0em}{0.3em}
 \titlespacing{\subsection}{0em}{0em}{0.25em}
 \titlespacing{\subsubsection}{0em}{0em}{0.25em}
 
@@ -61,7 +61,7 @@
 
 \newenvironment{resumeItem}
 {
-    \vspace{0.5em}
+    \vspace{0.25em}
 }
 {
 }
@@ -110,10 +110,10 @@
     \input{./projects.tex}
 }{
     \input{./skills.tex}
-    \input{./experience.tex}
-    \input{./projects.tex}
-    \input{./achievements.tex}
     \input{./education.tex}
+    \input{./experience.tex}
+    \input{./achievements.tex}
+    \input{./projects.tex}
 }
 
 \end{document}
