--- a/resume-cv/presentations.tex
+++ b/resume-cv/presentations.tex
@@ -3,6 +3,13 @@
 \section{Presentations}
 
 \begin{resumeItem}
+\experienceHead{Dimension of Posets and Random Graph Orders}{University of Waterloo}{Aug 2024}{Waterloo, ON.}
+\begin{resumeList}
+    \item A presentation of work completed during my research term under Jane Gao.
+\end{resumeList}
+\end{resumeItem}
+
+\begin{resumeItem}
 \experienceHead{Streams and Lazy Evalutation}{Webber Academy Programming Club}{Oct 2023}{Calgary, AB.}
 \begin{resumeList}
     \item An introduction to simulating infinite lists with streams and their manipulation.
