--- a/resume-cv/projects.tex
+++ b/resume-cv/projects.tex
@@ -1,7 +1,7 @@
 \section{Projects}
 
 \begin{resumeItem}
-\projectHead{\href{https://kdxiao.itch.io/bloom}{Bloom (Game)}}{Godot}{Jun 2024}
+\projectHead{\href{https://kdxiao.itch.io/bloom}{Bloom (Game)}}{Godot, GDScript}{Jun 2024}
 \begin{resumeList}
     \item Game jam submission made in 72 hours with Godot: ``you are a bee that pollinates flowers in a field to plant new hybrids''
     \item Implemented colour mixing, screen wrapping, movement, and flower spawning mechanics
