--- a/resume-cv/skills.tex
+++ b/resume-cv/skills.tex
@@ -5,6 +5,6 @@
 Go, Python, C++, JavaScript, GDScript, Haskell, Racket, Java, Bash, {\LaTeX}, HTML, CSS, Markdown, RegEx
 
 \subsubsection{Tools}
-Linux, Unix, Godot, Protobuf, Gomega, Ginkgo, Pandas, Matplotlib, NumPy, Beautiful Soup, Tensorflow, Scikit-learn, OpenCV
+Linux, Unix, Godot, Protobuf, Gomega, Ginkgo, Pandas, Matplotlib, NumPy, Tensorflow, Scikit-learn, OpenCV
 \end{resumeItem}
 
