split up page into subpages

--- a/resume-cv/achievements.tex
+++ b/resume-cv/achievements.tex
@@ -2,6 +2,10 @@
 
 \begin{resumeItem}
 \begin{resumeList}
+    \ifthenelse{ \equal{\version}{cv} }{
+    \item \achievement{Technical Achievement award}{UW Game Dev Club Game Jam}{Fall 2024}
+    }{}
+
     \item \achievement{$335^{\mathrm{th}}$ (top $10\%$), with score $26$}{William Lowell Putnam Mathematical Competition}{2022}
     \item \achievement{Estuary Sponsor Prize Winner}{UofTHacks X}{2023}
     \item \achievement{$10^{\mathrm{th}}$ in Canada}{Asian Pacific Mathematics Olympiad (APMO)}{2022}
