--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -1,7 +1,11 @@
 \section{Experience}
 
 \begin{resumeItem}
-\experienceHead{Combinatorics Researcher}{University of Waterloo}{May 2024 - Aug 2024}{Waterloo}
+\experienceHead{Software Engineer}{Trend Micro}{Jan 2025 - Apr 2025}{Kanata, ON.}
+\end{resumeItem}
+
+\begin{resumeItem}
+\experienceHead{Combinatorics Researcher}{University of Waterloo}{May 2024 - Aug 2024}{Waterloo, ON.}
 \begin{resumeList}
     \item Worked on novel research exploring random graph orders and poset dimension utilizing probabilistic methods including configuration models, approximation techniques, and convergence in probability. 
     \item Examined a conjecture about poset dimension, designing and running programs to search for counterexamples, and devising constructions to improve random graph order dimension bounds.
