--- a/resume-cv/projects.tex
+++ b/resume-cv/projects.tex
@@ -1,12 +1,23 @@
 \section{Projects}
 
 \begin{resumeItem}
+\projectHead{\href{https://arnavcs.itch.io/renovating-the-labyrinth}{Renovating the Labyrinth (Game)}}{JavaScript}{Oct 2024}
+\begin{resumeList}
+    \item Solo submission made in 72 hours with vanilla JavaScript on an HTML canvas for the UW Game Dev Club's fall 2024 game jam; voted winner of the technical achievement award
+    \item Built a real time optimized ray caster with ordered Bayer matrix dithering
+    \item Programmed 2D rigid body collision behaviour and a randomized Prim's algorithm for map generation
+\end{resumeList}
+\end{resumeItem}
+
+\ifthenelse{ \equal{\version}{cv} }{
+\begin{resumeItem}
 \projectHead{\href{https://kdxiao.itch.io/bloom}{Bloom (Game)}}{Godot, GDScript}{Jun 2024}
 \begin{resumeList}
-    \item Game jam submission made in 72 hours with Godot: ``you are a bee that pollinates flowers in a field to plant new hybrids''
+    \item Team submission made in 72 hours with Godot for the UW Game Dev Club's spring 2024 game jam
     \item Implemented colour mixing, screen wrapping, movement, and flower spawning mechanics
 \end{resumeList}
 \end{resumeItem}
+}{}
 
 \begin{resumeItem}
 \projectHead{\href{https://github.com/youssefsoli/IPFE}{InterPlanetary File Explorer (IPFE)}}{Go, Python, Scikit-learn, Estuary, Co:here, Three.js}{Jan 2023}
@@ -24,6 +35,7 @@
 \end{resumeList}
 \end{resumeItem}
 
+\ifthenelse{ \equal{\version}{cv} }{
 \begin{resumeItem}
 \projectHead{\href{https://github.com/arnavcs/quack-stack}{Custom Language Interpreter}}{Haskell}{May 2023 - Present}
 \begin{resumeList}
@@ -32,7 +44,6 @@
 \end{resumeList}
 \end{resumeItem}
 
-\ifthenelse{ \equal{\version}{cv} }{
 \begin{resumeItem}
 \projectHead{\href{https://github.com/arnavcs/cli-chess}{CLI Chess}}{Haskell}{Aug 2022 - Present}
 \begin{resumeList}
