--- a/resume-cv/projects.tex
+++ b/resume-cv/projects.tex
@@ -3,9 +3,9 @@
 \begin{resumeItem}
 \projectHead{\href{https://arnavcs.itch.io/renovating-the-labyrinth}{Renovating the Labyrinth (Game)}}{JavaScript}{Oct 2024}
 \begin{resumeList}
-    \item Solo submission made in 72 hours with vanilla JavaScript on an HTML canvas for the UW Game Dev Club's fall 2024 game jam; voted winner of the technical achievement award
-    \item Built a real time optimized ray caster with ordered Bayer matrix dithering
-    \item Programmed 2D rigid body collision behaviour and a randomized Prim's algorithm for map generation
+    \item Solo submission made in 72 hours with vanilla JavaScript on an HTML canvas for the UW Game Dev Club's fall 2024 game jam; voted winner of the technical achievement award.
+    \item Built a real time optimized ray caster with ordered Bayer matrix dithering.
+    \item Programmed 2D rigid body collision behaviour and a randomized Prim's algorithm for map generation.
 \end{resumeList}
 \end{resumeItem}
 
@@ -13,8 +13,8 @@
 \begin{resumeItem}
 \projectHead{\href{https://kdxiao.itch.io/bloom}{Bloom (Game)}}{Godot, GDScript}{Jun 2024}
 \begin{resumeList}
-    \item Team submission made in 72 hours with Godot for the UW Game Dev Club's spring 2024 game jam
-    \item Implemented colour mixing, screen wrapping, movement, and flower spawning mechanics
+    \item Team submission made in 72 hours with Godot for the UW Game Dev Club's spring 2024 game jam.
+    \item Implemented colour mixing, screen wrapping, movement, and flower spawning mechanics.
 \end{resumeList}
 \end{resumeItem}
 }{}
