--- a/resume-cv/skills.tex
+++ b/resume-cv/skills.tex
@@ -2,7 +2,7 @@
 
 \begin{resumeItem}
 \subsubsection{Languages}
-Go, Python, C++, JavaScript, GDScript, Haskell, Racket, Java, Bash, {\LaTeX}, HTML, CSS, Markdown, RegEx
+Python, C++, Go, JavaScript, GDScript, Haskell, Racket, Java, Bash, {\LaTeX}, HTML, CSS, Markdown, RegEx
 
 \subsubsection{Tools}
 Linux, Unix, Godot, Protobuf, Gomega, Ginkgo, Pandas, Matplotlib, NumPy, Tensorflow, Scikit-learn, OpenCV
