resume new points

--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -5,6 +5,8 @@
 \begin{resumeList}
     \item Spearheaded Alicloud infrastructure deployment using Terraform, and developed serverless functions for disk snapshots.
     \item Engineered utility functions for Alicloud's Object Storage Service and Parameter Store, optimizing cloud workflows and enhancing secure data management.
+    \item Developed stack functions to send scan metrics and results to the backend, helping identify details about customer errors.
+    \item Performed a cost estimation for a customer to use our product, raising awareness of where we can reduce costs.
 \end{resumeList}
 \end{resumeItem}
 
@@ -30,15 +32,15 @@
 \end{resumeList}
 \end{resumeItem}
 
+\ifthenelse{ \equal{\version}{cv} }{
 \begin{resumeItem}
 \experienceHead{Data Science Intern}{Tektorch.ai}{Apr 2022 - Aug 2022}{Online}
 \begin{resumeList}
-\ifthenelse{ \equal{\version}{cv} }{
     \item Extracted features such as job title, location, classification, and pay from a job listing website using Python, Beautiful Soup 4, NumPy, and Pandas to create a dataset for analysis. 
-}{}
     \item Developed an end-to-end data visualization pipeline to ingest data and display trends using Matplotlib and NumPy.
 \end{resumeList}
 \end{resumeItem}
+}{}
 
 \ifthenelse{ \equal{\version}{cv} }{
 \begin{resumeItem}
