--- a/resume-cv/projects.tex
+++ b/resume-cv/projects.tex
@@ -11,6 +11,16 @@
 
 \ifthenelse{ \equal{\version}{cv} }{
 \begin{resumeItem}
+\projectHead{\href{https://arnavcs.github.io/software-raycaster}{Software Raycaster}}{JavaScript}{Oct 2024}
+\begin{resumeList}
+    \item Built a raycaster that renders a specified scene to a canvas element.
+    \item Enabled options for Bayer matrix dithering, scene customization, and different casting algorithms.
+\end{resumeList}
+\end{resumeItem}
+}{}
+
+\ifthenelse{ \equal{\version}{cv} }{
+\begin{resumeItem}
 \projectHead{\href{https://kdxiao.itch.io/bloom}{Bloom (Game)}}{Godot, GDScript}{Jun 2024}
 \begin{resumeList}
     \item Team submission made in 72 hours with Godot for the UW Game Dev Club's spring 2024 game jam.
