added articles back and added a couple

--- a/resume-cv/arnav-kumar.tex
+++ b/resume-cv/arnav-kumar.tex
@@ -79,7 +79,7 @@
 }
 
 \newcommand{\experienceHead}[4]{
-    \textbf{#1} @ #2 \hfill #3 \\[-1.2em]
+    \textbf{#1} @ #2 \hfill #3 \\ \textit{#4} \\[-1.2em]
 }
 
 \newenvironment{resumeList}
