--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -3,16 +3,16 @@
 \begin{resumeItem}
 \experienceHead{Software Engineer}{Trend Micro}{Jan 2025 - Apr 2025}{Kanata, ON.}
 \begin{resumeList}
-    \item Spearheaded Alicloud infrastructure deployment using Terraform, and developed serverless functions for disk snapshots.
+    \item Spearheaded Alicloud infrastructure deployment using Terraform, and developed functionality for disk snapshots.
     \item Engineered utility functions for Alicloud's Object Storage Service and Parameter Store, optimizing cloud workflows and enhancing secure data management.
-    \item Developed stack functions to send scan metrics and results to the backend, helping identify details about customer errors.
-    \item Performed a cost estimation for a customer to use our product, raising awareness of where we can reduce costs.
+    \item Developed serverless functions to send scan metrics and results to the backend, helping identify details about customer errors and cutting customer costs by 50\%.
 \end{resumeList}
 \end{resumeItem}
 
 \begin{resumeItem}
 \experienceHead{Combinatorics Researcher}{University of Waterloo}{May 2024 - Aug 2024}{Waterloo, ON.}
 \begin{resumeList}
+    \item Authored a paper (The dimension of sparse random graph orders) in pre-print in arXiv (\href{https://arxiv.org/abs/2504.19029}{https://arxiv.org/abs/2504.19029}).
     \item Worked on novel research exploring random graph orders and poset dimension utilizing configuration models, approximation techniques, convergence in probability, devising constructions, and computationally searching for counterexamples. 
     % \item Examined a conjecture about poset dimension, designing and running programs to search for counterexamples, and devising constructions to improve random graph order dimension bounds.
     \item Developed two theorems about the nature of poset dimension for bipartite posets based on the dimension of induced subposets and for random graph orders.
