--- a/resume-cv/projects.tex
+++ b/resume-cv/projects.tex
@@ -1,6 +1,14 @@
 \section{Projects}
 
 \begin{resumeItem}
+\projectHead{\href{https://github.com/arnavcs/software-rasterizer}{Software Rasterizer}}{Elm}{May 2025}
+\begin{resumeList}
+    \item Created rasterizing essentials such as drawing shaded triangles pixel by pixel
+    \item Implemented a projection algorithm to view 3D objects from a camera.
+\end{resumeList}
+\end{resumeItem}
+
+\begin{resumeItem}
 \projectHead{\href{https://arnavcs.itch.io/renovating-the-labyrinth}{Renovating the Labyrinth (Game)}}{JavaScript}{Oct 2024}
 \begin{resumeList}
     \item Solo submission made in 72 hours with vanilla JavaScript on an HTML canvas for the UW Game Dev Club's fall 2024 game jam; voted winner of the technical achievement award.
@@ -17,9 +25,7 @@
     \item Enabled options for Bayer matrix dithering, scene customization, and different casting algorithms.
 \end{resumeList}
 \end{resumeItem}
-}{}
 
-\ifthenelse{ \equal{\version}{cv} }{
 \begin{resumeItem}
 \projectHead{\href{https://kdxiao.itch.io/bloom}{Bloom (Game)}}{Godot, GDScript}{Jun 2024}
 \begin{resumeList}
