--- a/resume-cv/skills.tex
+++ b/resume-cv/skills.tex
@@ -1,10 +1,15 @@
 \section{Skills}
 
 \begin{resumeItem}
-\subsubsection{Languages}
-Python, C++, Go, JavaScript, GDScript, Haskell, Racket, Java, Bash, {\LaTeX}, HTML, CSS, Markdown, RegEx
+\ifthenelse{ \equal{\version}{cv} }{
+\subsubsection{Linguistics}
+English, Hindi, Spanish, Russian (read, write, speak), and Japanese (only spoken)
+}{}
+
+\subsubsection{Programming}
+Python, C++, Go, JavaScript, GDScript, Haskell, Racket, Java, Bash, {\LaTeX}\ifthenelse{ \equal{\version}{cv} }{, HTML, CSS, Markdown, RegEx}{}
 
 \subsubsection{Tools}
-Linux, Unix, Godot, Protobuf, Gomega, Ginkgo, Pandas, Matplotlib, NumPy, Tensorflow, Scikit-learn, OpenCV
+Pandas, Matplotlib, NumPy, Tensorflow, Scikit-learn, OpenCV, Linux, Unix, Godot, Protobuf, Gomega, Ginkgo
 \end{resumeItem}
 
