--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -1,6 +1,15 @@
 \section{Experience}
 
 \begin{resumeItem}
+\experienceHead{Software Engineer (Graphics and Geometry)}{Arcol.io}{Sep 2025 - Dec 2025}{San Francisco, USA}
+\begin{resumeList}
+    \item Spearheaded Alicloud infrastructure deployment using Terraform, and developed functionality for disk snapshots.
+    \item Engineered utility functions for Alicloud's Object Storage Service and Parameter Store, optimizing cloud workflows and enhancing secure data management.
+    \item Developed serverless functions to send scan metrics and results to the backend, helping identify details about customer errors and cutting customer costs by 50\%.
+\end{resumeList}
+\end{resumeItem}
+
+\begin{resumeItem}
 \experienceHead{Software Engineer}{Trend Micro}{Jan 2025 - Apr 2025}{Kanata, ON.}
 \begin{resumeList}
     \item Spearheaded Alicloud infrastructure deployment using Terraform, and developed functionality for disk snapshots.
