--- a/resume-cv/skills.tex
+++ b/resume-cv/skills.tex
@@ -7,9 +7,9 @@ English, Hindi, Spanish, Russian (read, write, speak), and Japanese (only spoken
 }{}
 
 \subsubsection{Programming}
-Python, C++, Go, JavaScript, GDScript, Haskell, Racket, Java, Bash, {\LaTeX}\ifthenelse{ \equal{\version}{cv} }{, HTML, CSS, Markdown, RegEx}{}
+Python, C++, Rust, Go, JavaScript, TypeScript, Haskell, Racket, Java, Bash, {\LaTeX}\ifthenelse{ \equal{\version}{cv} }{, HTML, CSS, Markdown, RegEx}{}
 
 \subsubsection{Tools}
-Pandas, Matplotlib, NumPy, Tensorflow, Scikit-learn, OpenCV, Linux, Unix, Godot, Protobuf, Gomega, Ginkgo
+WebGL, Three.js, Pandas, Matplotlib, NumPy, Tensorflow, Scikit-learn, OpenCV, Linux, Unix, Godot, Protobuf
 \end{resumeItem}
 
