--- a/resume-cv/education.tex
+++ b/resume-cv/education.tex
@@ -1,7 +1,7 @@
 \section{Education}
 
 \begin{resumeItem}
-\experienceHead{Candidate for BSc. Computer Science (3\textsuperscript{rd} year)}{University of Waterloo}{2022 - Present}{Waterloo, ON.}
+\experienceHead{Candidate for BSc. Computer Science (4\textsuperscript{th} year)}{University of Waterloo}{2022 - Present}{Waterloo, ON.}
 \begin{resumeList}
     \item 4.0 GPA, all advanced level courses, and term distinction.
     \item Received the Ronald G. Dunkley National Scholarship (\$18,000), the President's Entrance Scholarship (\$3,500), the NSERC undergraduate research scholarship (\$6,000), and the Cenovus Energy STEM Scholarship (\$18,500).
