--- a/resume-cv/projects.tex
+++ b/resume-cv/projects.tex
@@ -1,7 +1,7 @@
 \section{Projects}
 
 \begin{resumeItem}
-\projectHead{\href{https://github.com/arnavcs/4d-raymarching-pathtracer}{4D Raytracing Pathtracer}}{C++}{Jul - Aug 2025}
+\projectHead{\href{https://github.com/arnavcs/4d-raymarching-pathtracer}{4D Raymarching Pathtracer}}{C++}{Jul - Aug 2025}
 \begin{resumeList}
     \item Implemented SDF raymarching in 4D space with CPU pathtracing to contruct GIF renders of the scene.
     \item Encoded the render such that every frame in the GIF, the camera sends out rays into a 3D affine subspace of the 4D space, which are scattered into 4D space upon colliding at a surface.
