--- a/resume-cv/education.tex
+++ b/resume-cv/education.tex
@@ -3,8 +3,8 @@
 \begin{resumeItem}
 \experienceHead{Candidate for BSc. Computer Science (4\textsuperscript{th} year)}{University of Waterloo}{2022 - Present}{Waterloo, ON.}
 \begin{resumeList}
-    \item 4.0 GPA, all advanced level courses, and term distinction.
-    \item Received the Ronald G. Dunkley National Scholarship (\$18,000), the President's Entrance Scholarship (\$3,500), the NSERC undergraduate research scholarship (\$6,000), and the Cenovus Energy STEM Scholarship (\$18,500).
+    \item 4.0 GPA, all advanced level courses, and term distinction. Received four merit based scholarships totaling \$46,000.
+    % \item Received the Ronald G. Dunkley National Scholarship (\$18,000), the President's Entrance Scholarship (\$3,500), the NSERC undergraduate research scholarship (\$6,000), and the Cenovus Energy STEM Scholarship (\$18,500).
 \end{resumeList}
 \end{resumeItem}
 
