--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -13,7 +13,8 @@
 \experienceHead{Software Engineer}{Trend Micro}{Jan 2025 - Apr 2025}{Kanata, ON.}
 \begin{resumeList}
     % \item Spearheaded Alicloud infrastructure deployment using Terraform, and developed functionality for disk snapshots.
-    \item Engineered utility functions for Alicloud's Object Storage Service and Parameter Store, optimizing cloud workflows and enhancing secure data management.
+    % \item Engineered utility functions for Alicloud's Object Storage Service and Parameter Store, optimizing cloud workflows and enhancing secure data management.
+    \item Engineered utility functions for Alicloud's webservices, optimizing cloud workflows and securing data management.
     \item Developed serverless functions to send scan metrics and results to the backend, helping identify details about customer errors and significantly cutting customer costs.
 \end{resumeList}
 \end{resumeItem}
@@ -24,24 +25,24 @@
     \item Authored a paper (The dimension of sparse random graph orders) in pre-print in arXiv (\href{https://arxiv.org/abs/2504.19029}{https://arxiv.org/abs/2504.19029}).
     \item Worked on novel research exploring random graph orders and poset dimension utilizing configuration models, approximation techniques, convergence in probability, devising constructions, and computationally searching for counterexamples. 
     % \item Examined a conjecture about poset dimension, designing and running programs to search for counterexamples, and devising constructions to improve random graph order dimension bounds.
-    \item Developed two theorems about the nature of poset dimension for bipartite posets based on the dimension of induced subposets and for random graph orders.
 \ifthenelse{ \equal{\version}{cv} }{
+    \item Developed two theorems about the nature of poset dimension for bipartite posets based on the dimension of induced subposets and for random graph orders.
     \item Engaged in regular meetings to discuss and advance research, demonstrating capacity for effective collaboration.
 }{}
 \end{resumeList}
 \end{resumeItem}
 
-\ifthenelse{ \equal{\focus}{general} }{
 \begin{resumeItem}
 \experienceHead{Blockchain Software Engineer}{Dandelion Networks}{May 2023 - Aug 2023}{Online}
 \begin{resumeList}
     \item Developed and implemented an enhanced lattice syncing and node discovery algorithm in Go, querying peers with Protocol Buffers to identify and address missing blocks in the local lattice with secure and concurrent updates.
+\ifthenelse{ \equal{\version}{cv} }{
     \item Created and deployed a locally hosted debugging website in Go to be run by each node of the blockchain network.
     \item Designed multiple mock servers, clients, and services with Ginkgo and Gomega to test the algorithms.
+}{}
     \item Created Jenkins pipeline which automatically build, test, vet, and format pushed code to catch regressions.
 \end{resumeList}
 \end{resumeItem}
-}{}
 
 \ifthenelse{ \equal{\version}{cv} }{
 \begin{resumeItem}
